<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">saü sözlük</string>
    <string name="action_about">about</string>
    <string name="about_info">developed by guguluk</string>
    <string name="test_info">tested by mia</string>
    <string name="bugSense">9594ae62</string>
    <string name="error">error</string>
    <string name="title_activity_entry_list">saü sözlük</string>
    <string name="topic_not_found">not found</string>
    <string name="how">h?</string>
    <string name="title_activity_router">router</string>
    <string name="welcome">such wow!</string>
    <string name="noob">noob</string>
    <string name="writer">writer</string>
    <string name="moderator">moderator</string>
    <string name="admin">admin</string>
    <string name="unknown">unknown</string>
    <string name="generation">generation</string>
    <string name="entry">entry</string>
    <string name="point">point</string>
    <string name="last_five_entry_title">last 5 entry:</string>
    <string name="last_active_title">last active:</string>
    <string name="registered_title">registered:</string>
    <string name="title_activity_login">login</string>
    <string name="loginFormTitle">login</string>
    <string name="loginUsernameTitle">nickname:</string>
    <string name="loginUsernameInputHint">nickname or email</string>
    <string name="loginPasswordTitle">password:</string>
    <string name="loginPasswordInputHint">so cute password</string>
    <string name="loginButton">go go go</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="new_entry_hint">...</string>
    <string name="btn_close">x</string>
    <string name="btn_bkz">bkz</string>
    <string name="btn_spoiler">spoiler</string>
    <string name="btn_link">link</string>
    <string name="btn_star">*</string>
    <string name="btn_writer">writer</string>
    <string name="btn_fire">fire</string>
    <string name="empty_entry">where is your entry?!</string>
    <string name="new_topic_hint">hmm...</string>
    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>
    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>
    <string name="date_util_suffix">ago</string>
    <string name="now">now</string>

</resources>
