<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_new"
    android:background="#34495e"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:background="#ffffff"
        android:orientation="vertical"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/entry_content"
                android:gravity="left|top"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/new_entry_hint"
                android:textColor="#34495e"
                android:textSize="12dp"
                android:background="#ffffff"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="right"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_close"
                android:layout_weight="2"
                android:textSize="10dp"
                android:layout_marginRight="3dp"
                android:background="#85144B"
                android:textColor="#ffffff"
                android:padding="3dp" />

            <Button
                android:id="@+id/bkz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_bkz"
                android:layout_weight="1"
                android:textSize="10dp"
                android:layout_marginRight="3dp"
                android:background="#3498db"
                android:textColor="#ffffff"
                android:padding="3dp" />

            <Button
                android:id="@+id/spoiler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_spoiler"
                android:textSize="10dp"
                android:layout_weight="1"
                android:layout_marginRight="3dp"
                android:background="#3498db"
                android:textColor="#ffffff"
                android:padding="3dp" />

            <Button
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_link"
                android:textSize="10dp"
                android:layout_weight="1"
                android:layout_marginRight="3dp"
                android:background="#3498db"
                android:textColor="#ffffff"
                android:padding="3dp" />

            <Button
                android:id="@+id/yildiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/btn_star"
                android:textSize="10dp"
                android:layout_weight="1"
                android:background="#3498db"
                android:textColor="#ffffff"
                android:padding="3dp" />

            <Button
                android:id="@+id/yazar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/btn_writer"
                android:textSize="10dp"
                android:layout_weight="1"
                android:background="#3498db"
                android:textColor="#ffffff"
                android:padding="3dp" />

            <Button
                android:id="@+id/atesle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_fire"
                android:textSize="10dp"
                android:layout_weight="1"
                android:background="#34495e"
                android:textColor="#ffffff"
                android:layout_marginLeft="25dp"
                android:padding="3dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>