<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="15dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="#34495e"
            android:textSize="24dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/auth"
            android:layout_width="wrap_content"
            android:background="#428bca"
            android:padding="5dp"
            android:textColor="#ffffff"
            android:textSize="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:textColor="#34495e"
            android:textSize="12dp"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/generation"
                android:layout_width="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#34495e"
                android:textSize="14dp"
                android:paddingRight="20px"
                android:paddingLeft="0px"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/entry_count"
                android:layout_width="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="#34495e"
                android:textSize="14dp"
                android:paddingRight="20px"
                android:paddingLeft="0px"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:background="#ffffff"
                android:layout_marginTop="15dp"
                android:textColor="#34495e"
                android:paddingRight="20px"
                android:paddingLeft="0px"
                android:textSize="14dp"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/last_five_entry_title"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:textColor="#555555"
            android:text="@string/last_five_entry_title"
            android:textSize="12dp"
            android:paddingTop="10px"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_height="1dp"
            android:background="#34495e"/>

        <ListView
            android:id="@+id/listFiveEntry"
            android:layout_width="match_parent"
            android:cacheColorHint="#00000000"
            android:scrollbars="none"
            android:layout_height="144dp" />

        <TextView
            android:id="@+id/last_active_title"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:layout_marginTop="16dp"
            android:textColor="#555555"
            android:text="@string/last_active_title"
            android:textSize="12dp"
            android:paddingTop="10px"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_height="1dp"
            android:background="#34495e"/>

        <TextView
            android:id="@+id/last_active_value"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:textColor="#34495e"
            android:textSize="13dp"
            android:paddingTop="12dp"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/registered_title"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:layout_marginTop="16dp"
            android:textColor="#555555"
            android:text="@string/registered_title"
            android:textSize="12dp"
            android:paddingTop="10px"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_marginTop="1dp"
            android:layout_height="1dp"
            android:background="#34495e"/>

        <TextView
            android:id="@+id/registered_value"
            android:layout_width="wrap_content"
            android:background="#ffffff"
            android:textColor="#34495e"
            android:textSize="13dp"
            android:paddingTop="12dp"
            android:layout_height="wrap_content"
            />

        </LinearLayout>
</LinearLayout>
</ScrollView>